# todoist-widget

./: .gitignore  CLAUDE.md  DESIGN.md  TODOS.md
.claude/: launch.json  settings.json
.claude/commands/: issue.md
.claude/skills/issue/: SKILL.md
.github/workflows/: release.yml
documents/: README.md
documents/design/: features.md  todoist-focus-widget.md
documents/design/detailed/: 01-todoist-api.md  02-tauri-ipc.md  03-components.md  04-state-management.md  05-window-management.md  README.md
todoist-focus-widget/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
todoist-focus-widget/.github/workflows/: release.yml
todoist-focus-widget/src/: App.css  App.tsx  Settings.css  Settings.tsx  index.css  main.tsx
todoist-focus-widget/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
todoist-focus-widget/src-tauri/capabilities/: main.json
todoist-focus-widget/src-tauri/icons/: icon.icns
todoist-focus-widget/src-tauri/src/: config.rs  lib.rs  main.rs  todoist.rs
todoist-focus-widget/src/components/: TaskItem.tsx
todoist-focus-widget/src/hooks/: useTasks.ts
