[package]
name = "todoist-focus-widget"
version = "0.1.0"
description = "Todoist Focus Widget for Mac"
authors = []
edition = "2021"

# objc 0.2 の古いマクロが cfg(cargo-clippy) を使うため warning が出るのを抑制
[lints.rust]
unexpected_cfgs = "allow"

[lib]
name = "todoist_focus_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
resvg = "0.44"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
